--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -3,6 +3,7 @@
     gap: 1rem;
     grid-template-columns: 20rem auto 20rem;
     position: relative;
+    height: 100%;
 }
 
 /* .Home>:nth-child(1){
@@ -23,12 +24,12 @@
 
 @media screen and (max-width:1500px) {
     .Home {
-        grid-template-columns: auto 20rem;
+        grid-template-columns: 18rem auto 20rem;
     }
 
-    .ProfileSide {
+    /* .ProfileSide {
         display: none
-    }
+    } */
 
 }
 
@@ -37,7 +38,9 @@
         grid-template-columns: auto;
     }
 
-
+.ProfileSide {
+        display: none
+    }
     .RightSide {
         display: none;
         }
